--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,7 +15,7 @@ header {
         background: url('../assets/img/big_bg_header.webp') center/cover fixed;
     }
 
-    &::before {
+    &::after {
         display: block;
         content: "";
         position: absolute;
@@ -47,11 +47,11 @@ h1 {
 }
 
 .container-button-header {
-    width: 100%;
     display: flex;
     justify-content: center;
     position: absolute;
     flex-wrap: wrap;
+    width: 100%;
     bottom: 20px;
     margin: 0 auto;
     z-index: 1;
@@ -67,7 +67,7 @@ h1 {
     width: 80px;
     border-radius: 50%;
     background-color: $color-navy;
-    margin: 25px;
+    margin: 20px;
     opacity: 0;
     display: flex;
     justify-content: center;
